fix scrollbar styling for entire app

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,11 +74,12 @@ hr {
 }
 
 ::-webkit-scrollbar-track {
-  background: #555;
+  background: #382337;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: whitesmoke;
+  background: #a89467;
   border-radius: 5px;
 }
 
